PhD reserach plan + SKR

--- a/aalto.bib
+++ b/aalto.bib
@@ -67,10 +67,9 @@
   number = {8}
 }
 
-@article{allenCryptoCircularEconomy,
+@misc{allenCryptoCircularEconomy,
   title = {The {{Crypto}}-{{Circular Economy}}},
   author = {Allen, Darcy WE and Berg, Chris and Potts, Jason},
-  pages = {7},
   file = {/home/avnerus/Zotero/storage/TURKSM6R/Allen et al. - The Crypto-Circular Economy.pdf},
   language = {en}
 }
@@ -829,6 +828,22 @@
   journal = {Intergroup behavior}
 }
 
+@article{brownPraiseParasiteDark2013,
+  title = {In Praise of the Parasite: The Dark Organizational Theory of {{Michel Serres}}},
+  shorttitle = {In Praise of the Parasite},
+  author = {Brown, Steven D.},
+  year = {2013},
+  month = jun,
+  volume = {16},
+  issn = {1982-1654, 1516-084X},
+  doi = {10.22456/1982-1654.36928},
+  abstract = {Michel Serres' concept of `the parasite' provides for a sustained rethinking of basic categories in human social science. As an example of post-Kantian philosophy, Serres critiques the classical logic of identity as based on a `third man' argument. This third space \textendash{} personified as the parasite \textendash{} is essential to thinking communication and transformation in systems. Parasitism operates through the logic of taking without giving or `abuse value'. But the parasite nevertheless makes exchange possible by creating connections between otherwise incommensurable forms of ordering. Human relations oscillate through period of disequilibrium, often involving scapegoating and exclusion, as parasitic cascades emerge. However, parasites in the form of jokers and quasi-objects create powerful mechanisms for creating collectivity and individuality. The `dark organizational theory' of Serres allows for adequate descriptions of these processes.},
+  file = {/home/avnerus/Zotero/storage/ZUESSYDA/Brown - 2013 - In praise of the parasite the dark organizational.pdf},
+  journal = {Inform\'atica na educa\c{c}\~ao: teoria \& pr\'atica},
+  language = {en},
+  number = {1}
+}
+
 @article{brynenPeacebuildingGamesSimulations2013,
   title = {Peacebuilding {{With Games}} and {{Simulations}}},
   author = {Brynen, Rex and Milante, Gary},
@@ -1038,13 +1053,17 @@
   publisher = {{Sage, Thousand Oaks}}
 }
 
-@article{chenailTenStepsConceptualizing,
-  title = {Ten {{Steps}} for {{Conceptualizing}} and {{Conducting Qualitative Research Studies}} in a {{Pragmatically Curious Manner}}},
-  author = {Chenail, Ronald J},
-  pages = {20},
-  abstract = {In a world of methodological pluralism and mixed-methods, qualitative researchers can take a pathway of pragmatic curiosity by exploring their research interests and the possible design and methodology choices to create studies that not only allow them to pursue their investigative curiosities, but also result in coherent and effective systems of procedural choices. Ten steps are offered for researchers to conceive and conduct qualitative research projects that are both responsive to research goals and objectives and defendable to criteria of quality and critics of utility.},
+@article{chenailTenStepsConceptualizing2011,
+  title = {Ten {{Steps}} for {{Conceptualizing}} and {{Conducting Qualitative Research Studies}} in a {{Pragmatically Curious Manner}}.},
+  author = {Chenail, Ronald J.},
+  year = {2011},
+  volume = {16},
+  pages = {1713--1730},
+  publisher = {{ERIC}},
   file = {/home/avnerus/Zotero/storage/7PPFSQBS/Chenail - Ten Steps for Conceptualizing and Conducting Quali.pdf},
-  language = {en}
+  isbn = {1052-0147},
+  journal = {Qualitative Report},
+  number = {6}
 }
 
 @inproceedings{choiCanYouFeel2016,
@@ -1169,12 +1188,17 @@
   number = {2}
 }
 
-@article{corbinGroundedTheoryResearch,
+@article{corbinGroundedTheoryResearch1990,
   title = {Grounded Theory Research: {{Procedures}}, Canons, and Evaluative Criteria},
-  author = {Corbin, Juliet and Strauss, Anselm},
-  pages = {19},
+  author = {Corbin, Juliet M. and Strauss, Anselm},
+  year = {1990},
+  volume = {13},
+  pages = {3--21},
+  publisher = {{Springer}},
   file = {/home/avnerus/Zotero/storage/K999UBES/Corbin and Strauss - Grounded theory research Procedures, canons, and .pdf},
-  language = {en}
+  isbn = {0162-0436},
+  journal = {Qualitative sociology},
+  number = {1}
 }
 
 @article{coyleBioinspiredSoftRobotics2018,
@@ -1250,6 +1274,22 @@
   language = {en}
 }
 
+@article{cropleyElementsUniversalAesthetic2008,
+  title = {Elements of a Universal Aesthetic of Creativity.},
+  author = {Cropley, David and Cropley, Arthur},
+  year = {2008},
+  month = aug,
+  volume = {2},
+  pages = {155--161},
+  issn = {1931-390X, 1931-3896},
+  doi = {10.1037/1931-3896.2.3.155},
+  abstract = {Creativity is in the eye of the beholder, that is, it involves an aesthetic judgment. However, there is no agreement on the categories in the mind of observers that enable them to recognize it, especially in widely differing domains such as fine art versus natural science. Concentration on socially useful products offers promise of a set of indicators that could be applied across domains: These include diagnosis, generation, germinality, and similar properties. Such indicators can be recognized with a substantial level of agreement by different observers, and can be used to judge both amount and kind of creativity. A universal aesthetic would offer perspectives on assessment of creativity, but would also improve communication among creative individuals and people such as critics, sponsors, clients, and the general public, as well as suggesting guidelines for teaching and learning activities and for better understanding of how to deal with misuse of creativity.},
+  file = {/home/avnerus/Zotero/storage/5P6GCJYR/Cropley and Cropley - 2008 - Elements of a universal aesthetic of creativity..pdf},
+  journal = {Psychology of Aesthetics, Creativity, and the Arts},
+  language = {en},
+  number = {3}
+}
+
 @misc{cryptoeconomicsCryptoCircularEconomy2019,
   title = {The {{Crypto}}-{{Circular Economy}}},
   author = {Cryptoeconomics},
@@ -1276,12 +1316,14 @@
   number = {3}
 }
 
-@article{cukierAPPLYINGHABERMASVALIDITY,
-  title = {{{APPLYING HABERMAS}}' {{VALIDITY CLAIMS AS A STANDARD FOR CRITICAL DISCOURSE ANALYSIS}}},
+@incollection{cukierApplyingHabermasValidity2004,
+  title = {Applying {{Habermas}}' Validity Claims as a Standard for Critical Discourse Analysis},
+  booktitle = {Information Systems Research},
   author = {Cukier, Wendy and Bauer, Robert and Middleton, Catherine},
-  pages = {27},
-  file = {/home/avnerus/Zotero/storage/NVIMZQPQ/Cukier et al. - APPLYING HABERMAS’ VALIDITY CLAIMS AS A STANDARD F.pdf},
-  language = {en}
+  year = {2004},
+  pages = {233--258},
+  publisher = {{Springer}},
+  file = {/home/avnerus/Zotero/storage/NVIMZQPQ/Cukier et al. - APPLYING HABERMAS’ VALIDITY CLAIMS AS A STANDARD F.pdf}
 }
 
 @article{cummingsHowImmersiveEnough2016,
@@ -1463,6 +1505,18 @@
   journal = {Journal of Human-Robot Interaction},
   language = {en},
   number = {3}
+}
+
+@article{delorenzoBewareMetaphorsChasses2011,
+  title = {Beware of Metaphors: Chasses and Orthogonality in Synthetic Biology},
+  author = {{de Lorenzo}, V{\'i}ctor},
+  year = {2011},
+  volume = {2},
+  pages = {3--7},
+  publisher = {{Taylor \& Francis}},
+  isbn = {1949-1018},
+  journal = {Bioengineered bugs},
+  number = {1}
 }
 
 @article{delvicarioEchoChambersEmotional2016,
@@ -1839,6 +1893,19 @@
   isbn = {978-1-4462-6779-0},
   keywords = {Qualitative research},
   language = {English}
+}
+
+@article{foggPersuasiveTechnologyUsing2002,
+  title = {Persuasive Technology: Using Computers to Change What We Think and Do},
+  author = {Fogg, Brian J.},
+  year = {2002},
+  volume = {2002},
+  pages = {2},
+  publisher = {{ACM New York, NY, USA}},
+  file = {/home/avnerus/Zotero/storage/389R8BUM/764008.763957.pdf},
+  isbn = {1530-2180},
+  journal = {Ubiquity},
+  number = {December}
 }
 
 @book{forsterMachineStops2015,
@@ -2523,6 +2590,24 @@
   publisher = {{Springer}}
 }
 
+@article{herreraBuildingLongtermEmpathy2018,
+  title = {Building Long-Term Empathy: {{A}} Large-Scale Comparison of Traditional and Virtual Reality Perspective-Taking},
+  shorttitle = {Building Long-Term Empathy},
+  author = {Herrera, Fernanda and Bailenson, Jeremy and Weisz, Erika and Ogle, Elise and Zaki, Jamil},
+  editor = {Bastian, Brock},
+  year = {2018},
+  month = oct,
+  volume = {13},
+  pages = {e0204494},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0204494},
+  abstract = {Virtual Reality (VR) has been increasingly referred to as the ``ultimate empathy machine'' since it allows users to experience any situation from any point of view. However, empirical evidence supporting the claim that VR is a more effective method of eliciting empathy than traditional perspective-taking is limited. Two experiments were conducted in order to compare the short and long-term effects of a traditional perspective-taking task and a VR perspective-taking task (Study 1), and to explore the role of technological immersion when it comes to different types of mediated perspective-taking tasks (Study 2). Results of Study 1 show that over the course of eight weeks participants in both conditions reported feeling empathetic and connected to the homeless at similar rates, however, participants who became homeless in VR had more positive, longer-lasting attitudes toward the homeless and signed a petition supporting the homeless at a significantly higher rate than participants who performed a traditional perspective-taking task. Study 2 compared three different types of perspective-taking tasks with different levels of immersion (traditional vs. desktop computer vs. VR) and a control condition (where participants received fact-driven information about the homeless). Results show that participants who performed any type of perspective-taking task reported feeling more empathetic and connected to the homeless than the participants who only received information. Replicating the results from Study 1, there was no difference in self-report measures for any of the perspective-taking conditions, however, a significantly higher number of participants in the VR condition signed a petition supporting affordable housing for the homeless compared to the traditional and less immersive conditions. We discuss the theoretical and practical implications of these findings.},
+  file = {/home/avnerus/Zotero/storage/6LK32KSF/Herrera et al. - 2018 - Building long-term empathy A large-scale comparis.pdf},
+  journal = {PLOS ONE},
+  language = {en},
+  number = {10}
+}
+
 @inproceedings{hewstoneLivingApartLiving2009,
   title = {Living Apart, Living Together? {{The}} Role of Intergroup Contact in Social Integration},
   booktitle = {Proceedings of the {{British Academy}}},
@@ -2912,6 +2997,19 @@
   isbn = {0027-8424},
   journal = {Proceedings of the National Academy of Sciences},
   number = {19}
+}
+
+@incollection{jagerSoftActuatorMaterials2020,
+  title = {Soft Actuator Materials for Textile Muscles and Wearable Bioelectronics},
+  booktitle = {Wearable {{Bioelectronics}}},
+  author = {Jager, Edwin W.H. and Martinez, Jose G. and Zhong, Yong and Persson, Nils-Krister},
+  year = {2020},
+  pages = {201--218},
+  publisher = {{Elsevier}},
+  doi = {10.1016/B978-0-08-102407-2.00008-4},
+  file = {/home/avnerus/Zotero/storage/UU3CX9S9/Jager et al. - 2020 - Soft actuator materials for textile muscles and we.pdf},
+  isbn = {978-0-08-102407-2},
+  language = {en}
 }
 
 @article{jainNanoporeSequencingAssembly2018,
@@ -3361,10 +3459,9 @@
   language = {en}
 }
 
-@article{kimSoftRoboticOrigami,
+@misc{kimSoftRoboticOrigami,
   title = {Soft {{Robotic Origami Structures}}: {{Highly Deformable}} and {{Configurable Soft Robots}}},
   author = {Kim, Woong-Bae and Cho, Kyu-Jin},
-  pages = {1},
   file = {/home/avnerus/Zotero/storage/U6AE25EV/Kim and Cho - Soft Robotic Origami Structures Highly Deformable.pdf},
   language = {en}
 }
@@ -4111,6 +4208,22 @@
   keywords = {Body Awareness,Perception,Phenomenology,Self-Perception,Somesthetic Perception}
 }
 
+@article{martinezInvestigationElectricallyConducting2018,
+  title = {Investigation of Electrically Conducting Yarns for Use in Textile Actuators},
+  author = {Martinez, Jose G and Richter, Klaus and Persson, Nils-Krister and Jager, Edwin W H},
+  year = {2018},
+  month = jul,
+  volume = {27},
+  pages = {074004},
+  issn = {0964-1726, 1361-665X},
+  doi = {10.1088/1361-665X/aabab5},
+  abstract = {Textile actuators are an emerging technology to develop biomimetic actuators with synergetic actuation. They are composed of a passive fabric coated with an electroactive polymer providing with mechanical motion. Here we used different conducting yarns (polyamide+carbon, silicon+carbon, polyamide+silver coated, cellulose+carbon, polyester+2 \texttimes{} INOX 50 {$\mu$}m, polyester+2 \texttimes{} Cu/Sn and polyester+gold coated) to develop such textile actuators. It was possible to coat them through direct electrochemical methods, which should provide with an easier and more cost-effective fabrication process. The conductivity and the electrochemical properties of the yarns were sufficient to allow the electropolymerization of the conducting polymer polypyrrole on the yarns. The electropolymerization was carried out and both the linear and angular the actuation of the yarns was investigated. These yarns may be incorporated into textile actuators for assistive prosthetic devices easier and cheaper to get and at the same time with good mechanical performance are envisaged.},
+  file = {/home/avnerus/Zotero/storage/UKNL2IZH/Martinez et al. - 2018 - Investigation of electrically conducting yarns for.pdf},
+  journal = {Smart Materials and Structures},
+  language = {en},
+  number = {7}
+}
+
 @article{martinUsingIntergroupContact2017,
   title = {Using an Intergroup Contact Approach to Improve Gender Relationships: {{A}} Case Study of a Classroom-Based Intervention},
   author = {Martin, Carol Lynn and Fabes, Richard A. and Hanish, Laura D. and Gaertner, Bridget and Miller, Cindy Faith and Foster, Stacie and Updegraff, Kimberly A.},
@@ -4196,6 +4309,25 @@
   year = {1990},
   publisher = {{SIU Press}},
   isbn = {0-8093-1593-9}
+}
+
+@article{mazizKnittingWeavingArtificial2017,
+  title = {Knitting and Weaving Artificial Muscles},
+  author = {Maziz, Ali and Concas, Alessandro and Khaldi, Alexandre and St{\aa}lhand, Jonas and Persson, Nils-Krister and Jager, Edwin W. H.},
+  year = {2017},
+  month = jan,
+  volume = {3},
+  pages = {e1600327},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.1600327},
+  abstract = {A need exists for artificial muscles that are silent, soft, and compliant, with performance characteristics similar to those of skeletal muscle, enabling natural interaction of assistive devices with humans. By combining one of humankind's oldest technologies, textile processing, with electroactive polymers, we demonstrate here the feasibility of wearable, soft artificial muscles made by weaving and knitting, with tunable force and strain. These textile actuators were produced from cellulose yarns assembled into fabrics and coated with conducting polymers using a metal-free deposition. To increase the output force, we assembled yarns in parallel by weaving. The force scaled linearly with the number of yarns in the woven fabric. To amplify the strain, we knitted a stretchable fabric, exhibiting a 53-fold increase in strain. In addition, the textile construction added mechanical stability to the actuators. Textile processing permits scalable and rational production of wearable artificial muscles, and enables novel ways to design assistive devices. Textile artificial muscles were developed using weaving to increase the force and knitting to amplify the strain. Textile artificial muscles were developed using weaving to increase the force and knitting to amplify the strain.},
+  chapter = {Research Article},
+  copyright = {Copyright \textcopyright{} 2017, The Authors. This is an open-access article distributed under the terms of the Creative Commons Attribution-NonCommercial license, which permits use, distribution, and reproduction in any medium, so long as the resultant use is not for commercial advantage and provided the original work is properly cited.},
+  file = {/home/avnerus/Zotero/storage/R3SVLDGY/Maziz et al. - 2017 - Knitting and weaving artificial muscles.pdf;/home/avnerus/Zotero/storage/9AZCLJWB/e1600327.html;/home/avnerus/Zotero/storage/YQA6RB8S/e1600327.html},
+  journal = {Science Advances},
+  language = {en},
+  number = {1}
 }
 
 @article{mckennaSocialIdentitySelf2005,
@@ -4579,6 +4711,21 @@
   keywords = {avatar customization,avatars,Avatars,computer games,Computers,Educational institutions,Games,learning,memory,narrative,narrative manipulation,presence and engagement,video games,Virtual environments,Visualization}
 }
 
+@article{nguyenDesignComputationalModeling2020,
+  title = {Design and {{Computational Modeling}} of {{Fabric Soft Pneumatic Actuators}} for {{Wearable Assistive Devices}}},
+  author = {Nguyen, Pham Huy and Zhang, Wenlong},
+  year = {2020},
+  month = dec,
+  volume = {10},
+  pages = {9638},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-020-65003-2},
+  file = {/home/avnerus/Zotero/storage/DKIXRUFB/Nguyen and Zhang - 2020 - Design and Computational Modeling of Fabric Soft P.pdf},
+  journal = {Scientific Reports},
+  language = {en},
+  number = {1}
+}
+
 @misc{nicholsBestTelepresenceRobots,
   title = {Best Telepresence Robots for Business in 2020: {{Double Robotics}}, {{OhmniLabs}}, {{Meeting Owl}}, and More},
   shorttitle = {Best Telepresence Robots for Business in 2020},
@@ -4820,6 +4967,14 @@
   number = {4}
 }
 
+@book{pariserFilterBubbleWhat2011,
+  title = {The Filter Bubble: {{What}} the {{Internet}} Is Hiding from You},
+  author = {Pariser, Eli},
+  year = {2011},
+  publisher = {{Penguin UK}},
+  isbn = {0-14-196992-X}
+}
+
 @misc{parker-popeTruthSpinningDancer2008,
   title = {The {{Truth About}} the {{Spinning Dancer}}},
   author = {{Parker-Pope}, Tara},
@@ -4914,14 +5069,14 @@
   language = {en}
 }
 
-@phdthesis{peledSoftRoboticIncarnation2019,
+@misc{peledSoftRoboticIncarnation2019,
   title = {Soft {{Robotic Incarnation}}},
   author = {Peled, Avner},
   year = {2019},
+  publisher = {{Aalto University}},
   abstract = {This thesis is a postphenomenological interrogation into the use of soft robots as mediating bodies between humans, attempting to unfetishize their imaginative figure of the stranger through an event I call incarnation. Based on my own encounters with Palestinians for conflict resolution and through readings of phenomenological and sociological studies, I determine the importance of the physical body, its fleshiness, nonlinearity and organic qualities for the constitution of intercorporeality - a meaningful and transformative dialog. I investigate the potential of non-human robotic avatars to achieve intercorpreality and liberate the interlocutors from prejudice and identity constraints, proposing the use of soft robots as a medium of re-embodiment that could facilitate massive scale physical incarnations and create physical encounters between people who are unable to otherwise meet in person. As a proof-of-concept, a novel method for the production of soft robotic avatars is introduced, capable of bodily haptics, language translation, and animalistic emotional expression. The avatar is operated using a web-based software platform that enables easy development of third party applications. Using this method, HITODAMA, a first prototype for a soft robotic avatar, is produced. I perform an initial evaluation of the robot in an encounter between people of different cultures, using an example app in which they get to know one another using pictures. I analyze the results by conducting interviews with the participants, following the principles of interpretative phenomenological analysis.},
   file = {/home/avnerus/Zotero/storage/RDTN924T/Peled - Soft Robotic Incarnation.pdf},
-  language = {en},
-  school = {Aalto University}
+  language = {en}
 }
 
 @article{peledVerotuspaatosTuloverosta2019,
@@ -4941,6 +5096,15 @@
   doi = {10.1017/CBO9780511852022},
   abstract = {Arguing that a comprehensive and lasting solution to the Israeli-Palestinian conflict depends on a resolution of the Jewish-Palestinian conflict within Israel as much as it does on resolving the conflict between Israel and Palestinians in the Occupied Territories, this timely book explores the causes and consequences of the growing conflict between Israel's Jewish majority and its Palestinian-Arab minority. It warns that if Jewish-Arab relations in Israel continue to deteriorate, this will pose a serious threat to the stability of Israel, to the quality of Israeli democracy and to the potential for peace in the Middle East. The book examines the views and attitudes of both the Palestinian minority and the Jewish majority, as well as the Israeli state's historic approach to its Arab citizens. Drawing upon the experience of other states with national minorities, the authors put forward specific proposals for safeguarding and enhancing the rights of the Palestinian minority while maintaining the country's Jewish identity.},
   isbn = {978-0-521-76683-8}
+}
+
+@article{pelletierVirtualRealityTool2020,
+  title = {Virtual Reality as a Tool for Deradicalizing the Terrorist Mind: {{Conceptual}} and Methodological Insights from Intergroup Conflict Resolution and Perspective-Taking Research.},
+  author = {Pelletier, Petra and {Drozda-Senkowska}, Ewa},
+  year = {2020},
+  publisher = {{Educational Publishing Foundation}},
+  isbn = {1532-7949},
+  journal = {Peace and Conflict: Journal of Peace Psychology}
 }
 
 @article{pennyVirtualBodybuilding1993,
@@ -5255,6 +5419,7 @@
   publisher = {{Continuum}},
   address = {{London ; New York}},
   annotation = {OCLC: ocn277204419},
+  file = {/home/avnerus/Zotero/storage/BS4GS3EE/Jacques Ranciere - Dissensus_ On Politics and Aesthetics (2010).djvu},
   isbn = {978-1-84706-445-5},
   keywords = {Aesthetics,Philosophy,Political aspects,Political science},
   language = {en},
@@ -5331,6 +5496,20 @@
   number = {8}
 }
 
+@book{richeDatadrivenStorytelling2018,
+  title = {Data-Driven Storytelling},
+  editor = {Riche, Nathalie Henry and Hurter, Christophe and Diakopoulos, Nicholas and Carpendale, Sheelagh},
+  year = {2018},
+  publisher = {{CRC Press/Taylor \& Francis Group}},
+  address = {{Boca Raton, Florida}},
+  file = {/home/avnerus/Zotero/storage/H69I8547/Riche et al. - 2018 - Data-driven storytelling.pdf},
+  isbn = {978-1-138-19710-7 978-1-138-48225-8},
+  keywords = {Digital storytelling,Narration (Rhetoric),Storytelling in mass media,Visual communication},
+  language = {en},
+  lccn = {P96.N35 D38 2018},
+  series = {A {{K Peters Visualization Series}}}
+}
+
 @article{richUntetheredSoftRobotics2018,
   title = {Untethered Soft Robotics},
   author = {Rich, Steven I. and Wood, Robert J. and Majidi, Carmel},
@@ -5364,6 +5543,20 @@
   abstract = {As humanoid robot technology makes its way into the global economy, it is important for robot designers to try to understand the variety of cultural attitudes that exist throughout the world. However, to our knowledge, no one has yet surveyed Middle Eastern attitudes on this topic. We aim to try to bridge this gap. In particular, we wanted to understand how Arabic people might view having humanoid robots in their daily lives, and developed a questionnaire to understand these views. We also built an end-to-end Arabic conversational system on our humanoid robot Ibn Sina, and brought the robot to a mall in the United Arab Emirates. At the mall we encouraged people to interact with the robot as well as complete our questionnaire. With 131 respondents from 21 countries, our findings show significant regional differences in overall attitudes (people from the Gulf viewed humanoid robots more favorably than people from Africa), as well as an effect from college education (people with college degrees viewed humanoid robots less favorably than people without college degrees).},
   file = {/home/avnerus/Zotero/storage/7XCISD7N/Riek et al. - 2010 - Ibn Sina Steps Out Exploring Arabic Attitudes Tow.pdf},
   language = {en}
+}
+
+@book{riessmanNarrativeMethodsHuman2008,
+  title = {Narrative Methods for the Human Sciences},
+  author = {Riessman, Catherine Kohler},
+  year = {2008},
+  publisher = {{Sage Publications}},
+  address = {{Los Angeles}},
+  annotation = {OCLC: ocn172521772},
+  file = {/home/avnerus/Zotero/storage/E9MZTX4D/Riessman - 2008 - Narrative methods for the human sciences.pdf},
+  isbn = {978-0-7619-2997-0 978-0-7619-2998-7},
+  keywords = {Narrative inquiry (Research method)},
+  language = {en},
+  lccn = {H61.295 .R54 2008}
 }
 
 @article{rifinskiHumanhumanrobotInteractionRobotic2020,
@@ -5690,6 +5883,16 @@
   lccn = {H62 .Q35457 2007}
 }
 
+@book{serresParasite2013,
+  title = {The Parasite},
+  author = {Serres, Michel},
+  year = {2013},
+  volume = {1},
+  publisher = {{U of Minnesota Press}},
+  file = {/home/avnerus/Zotero/storage/KC8NK5YZ/(Posthumanities) Michel Serres - The Parasite-Univ Of Minnesota Press (2007).pdf},
+  isbn = {1-4529-4262-5}
+}
+
 @article{sevdalisCapturedMotionDance2011,
   title = {Captured by Motion: {{Dance}}, Action Understanding, and Social Cognition},
   shorttitle = {Captured by Motion},
@@ -5927,6 +6130,23 @@
   number = {3}
 }
 
+@article{smithHealthcareInformationTechnology2014,
+  title = {Healthcare Information Technology's Relativity Problems: A Typology of How Patients' Physical Reality, Clinicians' Mental Models, and Healthcare Information Technology Differ},
+  shorttitle = {Healthcare Information Technology's Relativity Problems},
+  author = {Smith, Sean W and Koppel, Ross},
+  year = {2014},
+  month = jan,
+  volume = {21},
+  pages = {117--131},
+  issn = {1067-5027, 1527-974X},
+  doi = {10.1136/amiajnl-2012-001419},
+  abstract = {Objective To model inconsistencies or distortions among three realities: patients' physical reality; clinicians' mental models of patients' conditions, laboratories, etc; representation of that reality in electronic health records (EHR). To serve as a potential tool for quality improvement of EHRs. Methods Using observations, literature, information technology (IT) logs, vendor and US Food and Drug Administration reports, we constructed scenarios/models of how patients' realities, clinicians' mental models, and EHRs can misalign to produce distortions in comprehension and treatment. We then categorized them according to an emergent typology derived from the cases themselves and refined the categories based on insights gained from the literature of interactive sociotechnical systems analysis, decision support science, and human computer interaction. Typical of grounded theory methods, the categories underwent repeated modifications. Results We constructed 45 scenarios of misalignment between patients' physical realities, clinicians' mental models, and EHRs. We then identified five general types of misrepresentation in these cases: IT data too narrowly focused; IT data too broadly focused; EHRs miss critical reality; data multiplicities\textendash perhaps contradictory or confusing; distortions from data reflected back and forth across users, sensors, and others. The 45 scenarios are presented, organized by the five types. Conclusions With humans, there is a physical reality and actors' mental models of that reality. In healthcare, there is another player: the EHR/healthcare IT, which implicitly and explicitly reflects many mental models, facets of reality, and measures thereof that vary in reliability and consistency. EHRs are both microcosms and shapers of medical care. Our typology and scenarios are intended to be useful to healthcare IT designers and implementers in improving EHR systems and reducing the unintended negative consequences of their use.},
+  file = {/home/avnerus/Zotero/storage/SNI4WGUQ/Smith and Koppel - 2014 - Healthcare information technology's relativity pro.pdf},
+  journal = {Journal of the American Medical Informatics Association},
+  language = {en},
+  number = {1}
+}
+
 @article{smithInterpretativePhenomenologicalAnalysis,
   title = {Interpretative {{Phenomenological Analysis}}},
   author = {Smith, Jonathan A and Osborn, Mike},
@@ -6093,6 +6313,22 @@
   journal = {Management Science},
   language = {en},
   number = {11}
+}
+
+@article{st.pierreWritingPostQualitative2018,
+  title = {Writing {{Post Qualitative Inquiry}}},
+  author = {St. Pierre, Elizabeth Adams},
+  year = {2018},
+  month = nov,
+  volume = {24},
+  pages = {603--608},
+  issn = {1077-8004, 1552-7565},
+  doi = {10.1177/1077800417734567},
+  abstract = {This article explains how writing served the author as a method of inquiry for several decades and how a long preparation using Derrida's deconstruction, Foucault's historical approaches, and Deleuze and Guattari's experimental concepts slowly deconstructed conventional humanist qualitative methodology enabling post qualitative inquiry. The author encourages those who inquire now, after the ontological turn, to break the habit of rushing to preexisting research methodologies and, instead, to follow the provocations that come from everywhere in the inquiry that is living and writing.},
+  file = {/home/avnerus/Zotero/storage/8STM9J95/St. Pierre - 2018 - Writing Post Qualitative Inquiry.pdf},
+  journal = {Qualitative Inquiry},
+  language = {en},
+  number = {9}
 }
 
 @book{stallerPreColumbianFoodwaysInterdisciplinary2010,
@@ -6367,6 +6603,23 @@
   journal = {Encyclopaedia of the History of Science, Technology, and Medicine in Non-Western Cultures}
 }
 
+@article{taylorInterracialContactVirtual2020,
+  title = {Interracial {{Contact}} in {{Virtual Reality}}: {{Best Practices}}},
+  shorttitle = {Interracial {{Contact}} in {{Virtual Reality}}},
+  author = {Taylor, Valerie Jones and Valladares, Juan Jos{\'e} and Siepser, Claire and Yantis, Caitlyn},
+  year = {2020},
+  month = oct,
+  volume = {7},
+  pages = {132--140},
+  issn = {2372-7322, 2372-7330},
+  doi = {10.1177/2372732220943638},
+  abstract = {Interracial interactions are occurring more frequently in virtual reality (VR) environments (e.g., multiplayer games, virtual classrooms, medical appointments). Individuals bring their biases and prejudices with them as they enter virtual spaces. Drawing from theories of real-world interracial interaction, predictable affective, cognitive, and behavioral processes undermine the quality of live interracial interactions. Emerging research using VR suggests that these same challenges occur in virtual social interactions. These challenges can be addressed using evidence-based best practices and policy recommendations: Improving racial/ethnic representation in VR, regulating codes of conduct, ensuring transparency about privacy/consent, and reducing explicit and implicit racist behavior. Following these recommendations can improve VR interracial contact and, in turn, realworld interracial interactions. While VR can serve as a unique tool to bring people together, carefully considered policies must mitigate the negative effects of racial bias that can hinder the progress of improved interracial interactions.},
+  file = {/home/avnerus/Zotero/storage/LMIX7RG2/Taylor et al. - 2020 - Interracial Contact in Virtual Reality Best Pract.pdf},
+  journal = {Policy Insights from the Behavioral and Brain Sciences},
+  language = {en},
+  number = {2}
+}
+
 @article{teichmanIntergroupBiasesConflict2007,
   title = {Intergroup Biases in Conflict: {{Reexamination}} with {{Arab}} Pre-Adolescents and Adolescents},
   shorttitle = {Intergroup Biases in Conflict},
@@ -6537,6 +6790,23 @@
   year = {2013},
   publisher = {{Routledge}},
   isbn = {1-315-01759-8}
+}
+
+@article{vangRaceVirtualEnvironments2014,
+  title = {Race in {{Virtual Environments}}: {{Competitive Versus Cooperative Games}} with {{Black}} or {{White Avatars}}},
+  shorttitle = {Race in {{Virtual Environments}}},
+  author = {Vang, Mao H. and Fox, Jesse},
+  year = {2014},
+  month = apr,
+  volume = {17},
+  pages = {235--240},
+  issn = {2152-2715, 2152-2723},
+  doi = {10.1089/cyber.2013.0289},
+  abstract = {Often, virtual environments and video games have established goals, and to achieve them, users must either compete or cooperate with others. The common ingroup identity model predicts that individuals maintain multiple identities at any given time based on roles, demographics, and contextual factors, and that they interpret others based on similarity (i.e., perceived ingroup) or dissimilarity (i.e., perceived outgroup) to these identities. In this experiment, we manipulated two aspects of a virtual partner's identity\textemdash race and task collaboration\textemdash to determine how users would perceive others in a virtual world. White participants (N = 99) played an anagram game competitively (outgroup) or cooperatively (ingroup) in a virtual environment with a black (outgroup) or white (ingroup) virtual partner. Contrary to hypotheses, performing either task led to more positive evaluations of black avatars than white avatars.},
+  file = {/home/avnerus/Zotero/storage/P3BGU46X/Vang and Fox - 2014 - Race in Virtual Environments Competitive Versus C.pdf},
+  journal = {Cyberpsychology, Behavior, and Social Networking},
+  language = {en},
+  number = {4}
 }
 
 @book{varelaEmbodiedMindCognitive2017,
