--- a/aalto.bib
+++ b/aalto.bib
@@ -9169,6 +9169,19 @@
   number = {3}
 }
 
+@article{trovatoReligionRobotsSynthesis2019,
+  title = {Religion and {{Robots}}: {{Towards}} the {{Synthesis}} of {{Two Extremes}}},
+  shorttitle = {Religion and {{Robots}}},
+  author = {Trovato, Gabriele and De Saint Chamas, Loys and Nishimura, Masao and Paredes, Renato and Lucho, Cesar and {Huerta-Mercado}, Alexander and Cuellar, Francisco},
+  year = {2019},
+  month = may,
+  issn = {1875-4805},
+  doi = {10.1007/s12369-019-00553-8},
+  abstract = {Humanity has been dreaming of robots since the ancient times. Historically, robots \textemdash{} originally called automata \textemdash{} have been the products of technology and faith. The relationship between robots and religion has disappeared in the last two centuries, as science and religion parted ways, and have typically been seen in opposition. Nowadays, as robots and AI are going to spread in human society, new possibilities and new ethical challenges are on the horizon. In this paper, we summarise the state of the art in robotics and religion, and propose a taxonomy for robot morphology that takes into account the factor of religion. The taxonomy encompasses the novel concept of `theomorphic robots', referred to robots that carry the shape of something divine.},
+  journal = {International Journal of Social Robotics},
+  language = {en}
+}
+
 @inproceedings{tsuiExploringUseCases2011,
   title = {Exploring Use Cases for Telepresence Robots},
   booktitle = {2011 6th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
