--- a/survey/ancova.Rmd
+++ b/survey/ancova.Rmd
@@ -12,6 +12,12 @@ library("pander")
 ```{r}
 Telerobot_ages %>%
   drop_na("Q_TELEROBOT_WOULD_U_1") %>%
-  anova_test(Q_TELEROBOT_WOULD_U_1git m ~ v * Q_AGE_GROUP) 
+  anova_test(Q_TELEROBOT_WOULD_U_1 ~ Q_AGE_GROUP * Q_ROBOT_NARS)
 
+```
+```{r}
+Telerobot_ages %>%
+  drop_na("Q_TELEROBOT_WOULD_U_1") %>%
+  aov(Q_TELEROBOT_WOULD_U_1 ~ v + Q_AGE_GROUP, data = .) %>%
+  Anova(type="III")
 ```
